# raytracer-optimisation

./: .gitignore  CMakeLists.txt
image_reference/: README.md
src/raymath/: Ray.cpp  Ray.hpp
src/rayscene/: Mesh.cpp  PhongMaterial.cpp  Scene.cpp  Sphere.cpp
tests/: CMakeLists.txt  test_e2e_simple.cpp  test_image_comparison.cpp  test_intentional_fail.cpp  test_sphere.cpp  test_utils.cpp  test_utils.h  test_vector3.cpp
